# Advanced-Ray-Tracing

./: .gitignore  720  CMakeLists.txt  Makefile  README.md  TODO  empty_environment_latlong.exr  empty_environment_latlong.exr.xmp  empty_environment_light_probe.exr  glass_sphere_env.exr.xmp  log  log2  log3  log4  log5  main.cpp  raytracer  reader.py  scene.json  scene.py  simple_transform.png.xmp  tester  texture_creator.py  writer.py
backup/: temp.cpp
game/: character.py  texture.py  transformation.py
hw1/inputs/: cornellbox.xml  scienceTree.xml  spheres.xml  spheres_mirror.xml
hw1/support_files/: parser.cpp  raytracer.cpp
pathTracing_outputs/: diffuse_test_nee_importance_russian.png 2  nee.png 2
scene/: main.xml
scene/ply/: wall.ply
src/: util.cpp
src/acceleration/: BVH.cpp  BVH.h
src/game/: GameMaker.cpp  GameMaker.h
src/hw1/inputs/: bunny.xml  cornellbox.xml  cornellbox_recursive.xml  scienceTree.xml  scienceTree_glass.xml  spheres_mirror.xml
src/hw1/support_files/: parser.cpp
src/lights/: AreaLight.cpp  AreaLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.h  PointLight.cpp  PointLight.h  SphericalDirectionalLight.cpp  SphericalDirectionalLight.h  SpotLight.cpp  SpotLight.h
src/models/: Camera.cpp  Camera.h  ImagePane.cpp  ImagePane.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshLight.cpp  MeshLight.h  Object.cpp  Object.h  ObjectInstance.cpp  ObjectInstance.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  SphereLight.cpp  SphereLight.h  Triangle.cpp  Triangle.h
src/models/util/: util.cpp  util.h
src/scene/: Scene.cpp  Scene.h
src/shaders/: BRDF.cpp  BRDF.h  PathTracer.cpp  PathTracer.h  Shader.cpp  Shader.h  TextureImage.cpp  TextureImage.h  TextureMap.cpp  TextureMap.h
src/test/: test_hdr.cpp  test_hdr.h
src/util/: 720  data_structures.cpp  data_structures.h  parser.cpp  parser.h  ply.cpp  ply.h  ppm.cpp  read_ply.cpp  read_ply.h  util.cpp  util.h
support_files/: raytracer  raytracer.cpp  simple.xml  test.ppm
test/: run_scenes.cpp  run_scenes.h
ui/: game.py  ui.py
(+3 files in other folders)
